fixed spacing issue in caption; updated readme.MD

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* page setup */
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
     font-family: Roboto, Helvetica, sans-serif;
@@ -7,6 +8,7 @@ html, body {
     display: flex;
     justify-content: center;
 }
+
 /* page content container */
 .container {
     height: 100%;
@@ -15,22 +17,24 @@ html, body {
     flex-direction: column;
     align-items: center;
 }
+
 /* common section styles */
 .section {
     width: 100%;
     display: flex;
 }
+
 /* page header */
 .top-row {
-            background-color: #1f2937;
-            height: 50px;
-            border-radius: 10px 10px 0 0;
-            color: white;
-            align-items: start;
-            justify-content: space-between;
-            padding-bottom: 75PX;
-            font-size: 24px;
-        }
+    background-color: #1f2937;
+    height: 50px;
+    border-radius: 10px 10px 0 0;
+    color: white;
+    align-items: start;
+    justify-content: space-between;
+    padding-bottom: 75PX;
+    font-size: 24px;
+}
 
 /* page header logo text*/
 .header-logo {
@@ -38,6 +42,7 @@ html, body {
     font-weight: bold;
     align-items: flex-start;
 }
+
 /* page header links*/
 .header-links {
     display: flex;
@@ -54,22 +59,27 @@ html, body {
     align-items: center;
     padding-bottom: 50px;
 }
-.left-block { /*left container*/
+
+.left-block {
+    /*left container*/
     display: flex;
     flex-direction: column;
-    width:35%;
+    width: 35%;
     padding-left: 20px;
 }
+
 .left-block-heading {
     font-size: 48px;
     font-weight: 900;
     color: #f9faf8;
 }
+
 .left-block-subtext {
     font-size: 18px;
     color: #e5e7eb;
-    width : 90%;
+    width: 90%;
 }
+
 .left-block-button {
     background-color: rgb(77, 60, 60);
     color: white;
@@ -84,6 +94,7 @@ html, body {
     border-width: 2px;
     border-color: white;
 }
+
 .right-block {
     display: flex;
     flex-direction: column;
@@ -105,16 +116,27 @@ html, body {
     object-fit: cover;
 }
 
-a {
-    color: white; 
+.image-credit {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.header-links a {
+    color: white;
     text-decoration: none;
     padding-left: 20px;
+}
+
+a {
+    color: white;
+    text-decoration: underline;
 }
 
 .section-2 {
     background-color: #EED8BF;
     flex-direction: column;
 }
+
 .section-2-heading {
     display: flex;
     justify-content: center;
@@ -124,6 +146,7 @@ a {
     padding-left: 20px;
     padding-top: 20px;
 }
+
 .section-2-subtext {
     display: flex;
     justify-content: center;
@@ -190,9 +213,9 @@ a {
     font-size: 36px;
     font-weight: light;
     font-style: italic;
-    color : #4D3C3C;
-    width : 35%;
-    margin : 0 auto;
+    color: #4D3C3C;
+    width: 35%;
+    margin: 0 auto;
     margin-top: 50px;
 }
 
@@ -202,15 +225,15 @@ a {
     justify-content: end;
     font-size: 18px;
     font-weight: bold;
-    color :#4D3C3C;
-    width : 35%;
-    margin :0 auto;
+    color: #4D3C3C;
+    width: 35%;
+    margin: 0 auto;
     margin-bottom: 50px;
 }
 
 .section-4 {
     background-color: #EED8BF;
-    color : #1f2937;
+    color: #1f2937;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -228,18 +251,18 @@ a {
     justify-content: space-evenly;
     align-items: center;
     padding-top: 25px;
-    padding-bottom : 25px;
+    padding-bottom: 25px;
 }
 
 .left-block-signup {
-    display: flex;  
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     font-size: 36px;
     font-weight: 900;
     color: white;
-    width : 50%;
+    width: 50%;
 }
 
 .left-block-heading {
@@ -251,7 +274,7 @@ a {
 .left-block-subtext {
     font-size: 18px;
     color: #e5e7eb;
-    width : 90%;
+    width: 90%;
 }
 
 .signup-block-button {
@@ -267,13 +290,14 @@ a {
     text-decoration: none;
     margin-top: 10px;
 }
-/* page footer */   
+
+/* page footer */
 .bottom-row {
-            background-color: #1f2937;
-            border-radius: 0 0 10px 10px;
-            color: white;
-            justify-content: center;
-            align-items: center;
-            padding-top: 25px;
-            padding-bottom: 25px;
-        }
+    background-color: #1f2937;
+    border-radius: 0 0 10px 10px;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
